--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
 	"name": "fcc-learn-npm-package-json",
+	"author":"Kate",
+	"description": "A project that does something awesome",
+	"keywords": [ "descriptive", "related", "words","freecodecamp" ],
+	"license": "MIT",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
